<resources>
    <string name="app_name">Intents</string>
    <string name="apps">Apps</string>
    <string name="settings">Setting</string>
    <string name="vibrate">Vibrate</string>
    <string name="specific">Specific App</string>
    <string name="developer">Developer</string>
    <string name="search">Search</string>
    <string name="wifi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="account">Add Account</string>


</resources>
