<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/margin"
        android:background="@color/grey_cloud"

        android:id="@+id/linear2">

        <Button
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:text="@string/specific"
            android:id="@+id/b_specific"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/padding"
            android:background="@color/platinum"
            android:layout_margin="@dimen/margin"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:text="@string/developer"
            android:id="@+id/b_developer"
            android:background="@color/platinum"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_text"
            android:hint="@string/search"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:text="@string/search"
            android:id="@+id/b_search"
            android:background="@color/platinum"
            android:textSize="@dimen/text_size"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


</LinearLayout>